--- a/base/deployment.yaml
+++ b/base/deployment.yaml
@@ -6,6 +6,9 @@ metadata:
     app: hello-web
 spec:
   replicas: 1
+  revisionHistoryLimit: 5
+  strategy:
+    type: RollingUpdate
   selector:
     matchLabels:
       app: hello-web
