--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Tüm kaynaklar bu namespace'e gider
 namespace: demo
 
 resources:
@@ -9,7 +8,7 @@ resources:
   - service.yaml
   - ingress.yaml
 
-# Jenkins, burada sadece newTag'i değiştirecek (immutable tag akışı)
+# Jenkins only changes newTag
 images:
   - name: docker.io/kemahlitos/hello-web
     newTag: "7.8"
